# Real-Time-Log-Monitoring

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
.github/workflows/: build.yml
config/: alerts.json  config.json
scripts/: generate_test_logs.sh  send_network_logs.sh
scripts/sample_codebase/: app.py  server.js  utils.cpp
sdk/: demo.py  logmonitor.py
src/: AlertDelivery.hpp  AlertManager.hpp  AlertRulesEngine.hpp  AuthManager.hpp  CodeIndexer.cpp  CodeIndexer.hpp  Dashboard.hpp  FileWatcher.hpp  HttpParser.hpp  HttpServer.hpp  LogPipeline.hpp  NetworkIngester.hpp  PatternEngine.cpp  PatternEngine.hpp  ProjectStore.hpp  RingBuffer.hpp  StatsAggregator.hpp  TSDB.hpp  TcpSocket.hpp  TenantManager.hpp  ThreadPool.hpp  UserStore.hpp  WebDashboard.hpp  WebUI.hpp  main.cpp
tests/: test_alert_rules.cpp  test_auth_manager.cpp  test_code_indexer.cpp  test_http_multitenant.cpp  test_http_server.cpp  test_network_ingester.cpp  test_pattern_engine.cpp  test_pipeline.cpp  test_ring_buffer.cpp  test_stores.cpp  test_tenant_manager.cpp  test_tsdb.cpp
